# SkyChatServer-RUST

./: .env.example  .gitignore  Cargo.toml  DOC.md  LICENSE  README.md  main.sqlite  report.json  setup.sh
migrations/: 20230720143216_tables.sql  20230815214337_testsuite.sql
private/: archives.html
src/: error.rs  main.rs  routes.rs  structs.rs  utils.rs
static/: 404.html  adminsettings.js  auth.css  auth.html  auth.js  chat.css  chat.js  home.css  logout.html  logout.js  no.html  oldchat.js  oldstyle.css  register.html  settings.js
static/partial/: index.html.bottom  index.html.top
