[package]
name = "collo"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "*"
rand = "*"
sha2 = "*"
tokio = { version = "=1.28.2", features = ["rt", "macros"] }
tower = { version = "=0.4", features = ["util"] }
http = "=1.0.0"
thiserror = "1.0.50"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

[profile.release]
strip = true
lto = true

[dev-dependencies]
lazy_static = "*"

[dependencies.axum]
version = "*"
default-features = true
features = ["ws", "headers", "http2"]

[dependencies.tower-http]
version = "=0.4.4"
default-features = true
features = [ "fs", "trace" ]

[dependencies.sqlx]
version = "*"
default-features = false
features = ["macros", "offline", "migrate", "runtime-actix-native-tls", "sqlite"]
