[package]
name = "collo"
edition = "2021"
version = "0.1.0"

[dependencies]
cookie = "=0.18.0"
dotenv = "*"
tower-cookies = "=0.10.0"
time = "=0.3.30"
http = "=1.0.0"
serde = "*"
thiserror = "1.0.50"

[dependencies.axum]
version = "*"
features = ["tower-log", "headers", "http2", "matched-path", "tokio", "form", "original-uri", "query", "ws"]
default-features = false

[dependencies.rand]
version = "*"
features = ["std"]
default-features = false

[dependencies.serde_json]
version = "*"
features = ["alloc"]

[dependencies.sha2]
version = "*"
features = []
default-features = false

[dependencies.sqlx]
version = "*"
features = ["runtime-tokio-native-tls", "macros", "sqlite", "offline", "migrate", "runtime-actix-native-tls"]
default-features = false

[dependencies.tokio]
version = "=1.28.2"
features = ["rt", "macros"]
default-features = false

[dependencies.tower]
version = "=0.4"
features = ["util"]

[dependencies.tower-http]
version = "=0.4.4"
features = ["fs", "trace"]

[dependencies.tracing]
version = "0.1.40"
features = ["attributes"]
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dev-dependencies]
lazy_static = "*"

[profile.release]
lto = true
strip = true

[profile.release.package]
